--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "https": false
   },
   "dependencies": {
+    "@blockworks-foundation/mango-client": "^3.1.2",
     "@crypto-com/chain-jslib": "0.0.19",
     "@ledgerhq/compressjs": "1.3.2",
     "@ledgerhq/cryptoassets": "6.18.0",
