update solana packages

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ledgerhq/hw-app-cosmos": "6.11.0",
     "@ledgerhq/hw-app-eth": "6.11.0",
     "@ledgerhq/hw-app-polkadot": "6.11.0",
+    "@ledgerhq/hw-app-solana": "6.11.0",
     "@ledgerhq/hw-app-str": "6.11.0",
     "@ledgerhq/hw-app-tezos": "6.11.0",
     "@ledgerhq/hw-app-trx": "6.11.0",
@@ -64,6 +65,7 @@
     "@ledgerhq/logs": "6.10.0",
     "@polkadot/types": "6.5.2",
     "@polkadot/types-known": "6.5.2",
+    "@solana/web3.js": "^1.30.1",
     "@taquito/ledger-signer": "^10.2.1",
     "@taquito/taquito": "10.2.1",
     "@types/bchaddrjs": "^0.4.0",
