--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "coininfo": "^5.1.0",
     "crypto-js": "^4.1.1",
     "eip55": "^2.1.0",
+    "eslint-plugin-deprecation": "^1.3.2",
     "eth-sig-util": "3.0.1",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.4",
